[package]
authors = ["Peter Mezei <mezeipetister@gmail.com>"]
edition = "2018"
name = "gzid"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gzlib = {version = "*", default_features = false, features = ["id"]}
structopt = "*"
